added javafx-plugin